# mle-project-challenge-2

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-run.sh  nginx.conf  pyproject.toml  pytest.ini
docs/: DOCUMENTATION.md  PRESENTATION-NOTES.md
evaluation_results/: evaluation_report.txt
notebooks/: Model_Evaluation.ipynb
src/: main.py
src/core/: dependencies.py  logging_config.py  model_watchdog.py
src/models/: requests.py
src/routers/: basic_router.py  model_router.py
src/services/: model_service.py
tests/bdd/: test_api_behavior.py
tests/bdd/features/: api_health.feature
tests/unit/: test_sample.py
tools/: evaluate_model.py  test_api.py  test_multi_container_reload.py  test_watchdog.py
