[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mle-project-challenge-2"
version = "0.1.0"
description = "Amle-project-challenge-2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]

# Optional: dev tools installed with `uv sync --extra dev`
[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy"]

# Auto-discover packages under src/
[tool.setuptools.packages.find]
where = ["src"]
# (optional) exclude patterns, e.g. nested examples:
# exclude = ["*_examples*", "experimental*"]

[tool.setuptools]
package-dir = {"" = "src"}
